# lucidy-engine

./: CMakeLists.txt  README.md  lucidy-engine.code-workspace  opengl-workspace.code-workspace
engine/LucidyEngine/: graphic_lib.hpp  settings.hpp
engine/LucidyEngine/generic/: data_types.hpp  graphic_lib.hpp  math.hpp  stack.hpp
engine/LucidyEngine/message_bus/: bus_node.hpp  message_bus.hpp
engine/LucidyEngine/renderer/: batch_render_target.hpp  batch_renderer.cpp  batch_renderer.hpp  vertex.hpp
engine/LucidyEngine/renderer/targets/: brt_cube.cpp  brt_cube.hpp  brt_square.cpp  brt_square.hpp
engine/LucidyEngine/scene/: scene.hpp  scene_controller.cpp  scene_controller.hpp
engine/LucidyEngine/shader/: shader.cpp  shader.hpp
engine/LucidyEngine/types/: data_types.hpp
engine/LucidyEngine/window/: debug_window.cpp  debug_window.hpp  gui_window.cpp  gui_window.hpp  normal_window.cpp  window.cpp  window.hpp
include/imgui/: imgui_impl_opengl3.h
lib/linux/x64/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
lib/windows/x64/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  main.cpp
src/assets/shaders/: f_color.glsl  v_square.glsl
src/engine/: debug_window.cpp  debug_window.hpp  lib_base.hpp  scene.cpp  scene.hpp  scene_controller.cpp  scene_controller.hpp  settings.hpp  window.cpp  window.hpp
src/engine/message_bus/: bus_node.hpp  message_bus.hpp
src/scenes/: example_scene.cpp  example_scene.hpp
